@@ -6,6 +6,7 @@
 * Store the list of pages to be saved on hitting the save button, not waiting to
   choose the filename. Closes Debian bug #648627
   (post-dialog selection changes influence which pages are saved)
+* Fixed progress text when importing files with multiple pages
 
 
 1.3.5 (07.10.2015):
